Fixed pom to support jdk 1.8